--- a/onemile/src/main/webapp/WEB-INF/web.xml
+++ b/onemile/src/main/webapp/WEB-INF/web.xml
@@ -71,5 +71,26 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<error-page>
+          <error-code>400</error-code>
+          <location>/WEB-INF/views/error/404.jsp</location>
+ 	</error-page>
+	<error-page>
+          <error-code>404</error-code>
+          <location>/WEB-INF/views/error/404.jsp</location>
+ 	</error-page> 
+ 	<error-page>
+          <error-code>405</error-code>
+          <location>/WEB-INF/views/error/405.jsp</location>
+ 	</error-page>
+ 	<error-page>
+          <error-code>500</error-code>
+          <location>/WEB-INF/views/error/500.jsp</location>
+ 	</error-page>
+ 	<error-page>
+          <error-code>503</error-code>
+          <location>/WEB-INF/views/error/404.jsp</location>
+ 	</error-page>
 
 </web-app>
